overflow bug

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -103,4 +103,7 @@ ul {
   font-family: $font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  position: absolute;
+  width: 100vw;
 }
